--- a/styles/c8_main.css
+++ b/styles/c8_main.css
@@ -1,7 +1,4 @@
-/* Existing CSS */
-
 /* the styles for the elements */
-<meta name="viewport" content="width=device-width, initial-scale=1">
 * {
 	margin: 0;
 	padding: 0;
@@ -20,81 +17,152 @@ body {
 a:focus, a:hover {
 	font-style: italic;
 }
-
-/* Existing header, nav, section, article, aside, footer styles continue... */
-
-/* Responsive Design Additions */
-
-/* Make body width 100% for smaller screens and remove margin */
-body {
-	width: 100%;
-	padding: 0 15px;
-	border: none;
+/* the styles for the header */
+header {
+	padding: 1.5em 0 2em 0;
+	border-bottom: 3px solid #931420;
+		background-image: -moz-linear-gradient(
+	    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+	background-image: -webkit-linear-gradient(
+	    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+	background-image: -o-linear-gradient(
+	    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+	background-image: linear-gradient(
+	    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+}
+header h2 {
+	font-size: 175%;
+	color: #800000;
+}
+header h3 {
+	font-size: 130%;
+	font-style: italic;
+}
+header img {
+	float: left;
+	padding: 0 30px;
+}
+.shadow {
+	text-shadow: 2px 2px 2px #800000;
+}
+/* the styles for the navigation menu */
+#nav_menu ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	position: relative;
+}
+#nav_menu ul li {
+	float: left;
+}
+#nav_menu ul li a {
+    display: block;
+    width: 160px;
+    text-align: center;
+    padding: 1em 0;
+    text-decoration: none;
+    background-color: #800000;
+    color: white;
+    font-weight: bold;
+}
+#nav_menu a.current {
+	color: yellow;
+}
+#nav_menu ul ul {
+    display: none;
+    position: absolute;
+    top: 100%;
+}
+#nav_menu ul ul li {
+	float: none;
+}
+#nav_menu ul li:hover > ul {
+	display: block;
+}
+#nav_menu > ul::after {
+    content: "";
+    clear: both;
+    display: block;
 }
 
-/* For screens smaller than 768px */
-@media (max-width: 768px) {
-    /* Adjust header */
-    header img {
-        float: none;
-        display: block;
-        margin: 0 auto;
-        padding-bottom: 10px;
-    }
-    
-    header h2, header h3 {
-        text-align: center;
-    }
-    
-    /* Adjust navigation menu for mobile */
-    #nav_menu ul {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-    #nav_menu ul li {
-        float: none;
-        margin: 5px;
-    }
-    #nav_menu ul li a {
-        width: auto;
-        padding: 0.5em 1em;
-    }
-
-    /* Adjust section and aside layout */
-    section, aside {
-        float: none;
-        width: 100%;
-        padding: 0;
-    }
-
-    /* Adjust article image */
-    article img {
-        float: none;
-        display: block;
-        margin: 0 auto 15px;
-        max-width: 100%;
-        height: auto;
-    }
+/* the styles for the section */
+section {
+	width: 525px;
+	float: right;
+	padding: 0 20px 20px 20px;
+}
+section h1 {
+	font-size: 150%;
+	padding: .5em 0 .25em 0;
+	margin: 0;
+}
+section h2 {
+	color: #800000;
+	font-size: 130%;
+	padding: .5em 0 .25em 0;
+}
+section p {
+	padding-bottom: .5em;
+}
+section blockquote {
+	padding: 0 2em;
+	font-style: italic;
+}
+section ul {
+	padding: 0 0 .25em 1.25em;
+	list-style-type: circle;
+}
+section li {
+	padding-bottom: .35em;
 }
 
-/* For screens smaller than 480px (very small screens, like phones in portrait) */
-@media (max-width: 480px) {
-    /* Adjust section and aside font sizes */
-    section h2, aside h2 {
-        font-size: 120%;
-    }
+/* the styles for the article */
+article {
+	padding: .5em 0;
+	border-top: 2px solid #800000;
+	border-bottom: 2px solid #800000;
+}
+article h2 {
+	padding-top: 0;
+}
+article h3 {
+	font-size: 105%;
+	padding-bottom: .25em;
+}
+article img {
+	float: right;
+	margin: .5em 0 1em 1em;
+	border: 1px solid black;
+}
 
-    /* Make navigation links stack vertically */
-    #nav_menu ul {
-        flex-direction: column;
-    }
-    #nav_menu ul li {
-        width: 100%;
-        text-align: center;
-    }
-    #nav_menu ul li a {
-        width: 100%;
-        padding: 1em 0;
-    }
+/* the styles for the aside */
+aside {
+	width: 215px;
+	float: right;
+	padding: 0 0 20px 20px;
+}
+aside h2 {
+	color: #800000;
+	font-size: 130%;
+	padding: .5em 0 .25em 0;
+}
+
+aside h3 {
+	font-size: 105%;
+	padding-bottom: .25em;
+}
+aside img {
+	padding-bottom: 1em;
+}
+
+/* the styles for the footer */
+footer {
+	background-color: #931420;
+	clear: both;
+
+}
+footer p {
+	text-align: center;
+	color: white;
+	padding: 1em 0;
 }
