--- a/styles/c8_main.css
+++ b/styles/c8_main.css
@@ -177,4 +177,68 @@ footer p {
 	}
 	section h2, aside hs {
 		font-size: 110%;
-		
+	}
+	aside h3 a {
+		font-size: 85%;
+	}
+}
+@media only screen and (max-width: 645px){
+	header img{
+		float: none;
+	}
+	header{
+		text-align: center;
+	}
+	section{
+		float: none;
+		width:95%
+	}
+	aside{
+		float: none;
+		width: 95%;
+		padding-right: 2.5%;
+	}
+	article img{
+		max-width:30%;
+	}
+	aside{
+		column-count:2;
+	}
+}
+@media only screen and (max-width: 645px){
+	header img{
+		float: none;
+	}
+	header{
+		text align: center;
+	}
+	section{
+		float: none;
+		width:95%
+	}
+	aside{
+		float: none;
+		width: 95%;
+		padding-right: 2.5%
+	}
+	article img{
+		max-width: 30%;
+	}
+	aside{
+		column-count:2;
+	}
+	#nav_menu{
+		display: none;
+	}
+	#mobile_menu{
+		display: block;
+	}
+	.slicknav_menu{
+		background-color: #800000 |imortant;
+	}
+}
+@media only screen and (max-width:415px){
+	body{
+		font-size: 90%;
+	}
+}
